--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "https://docs.google.com/spreadsheets/d/e/2PACX-1vS2geaFhTyEXiuqSdKl5DJBoq64vYp0ScGZLQb8GXdu1s6CxStTWt1We0VxcFmvJzyflr-2Brxp9LX1/pub?gid=0&single=true&output=csv",
   "main": "main.js",
   "scripts": {
-    "test": "node main.js"
+    "download": "node download.js",
+    "check": "node check.js"
   },
   "repository": {
     "type": "git",
